chrome/browser/resources/omnibox_popup/aim_app.css
/* Copyright 2025 The Chromium Authors
 * Use of this source code is governed by a BSD-style license that can be
 * found in the LICENSE file. */

/* #css_wrapper_metadata_start
 * #type=style-lit
 * #scheme=relative
 * #import=./omnibox_popup_shared_style.css.js
 * #include=omnibox-popup-shared-style
 * #css_wrapper_metadata_end */

:host {
  --composebox-context-menu-entrypoint-button-color: var(--color-omnibox-composebox-primary-action);
  --cr-composebox-custom-font-size: var(--omnibox-font-size);
  --cr-composebox-expanded-border-radius: 16px;
  --cr-composebox-input-placeholder-font-size: var(--omnibox-font-size);
  --cr-composebox-match-height: 40px;
  --cr-composebox-match-icon-container-padding-inline-start: 20px;
  --cr-composebox-match-icon-size: 16px;
  --cr-composebox-match-match-padding-bottom: 0;
  --cr-composebox-match-text-container-font-size: var(--omnibox-font-size);
  --cr-composebox-text-container-padding-block-start: 0;
  --search-animated-glif-rotation-duration: 2000ms;
}

cr-composebox {
  --cr-composebox-background-color: var(--color-omnibox-results-background);
  --color-composebox-background: var(--color-omnibox-results-background);
  --color-composebox-cancel-button: unset; /* Lens only */
  --color-composebox-cancel-button-light: var(--color-omnibox-text-dimmed);
  --color-composebox-context-entrypoint-hover-background: var(--color-omnibox-action-icon-hover);
  --color-composebox-context-entrypoint-text-disabled: var(--color-omnibox-composebox-foreground-disabled);
  --color-composebox-file-image-overlay: var(--color-omnibox-text);
  --color-composebox-font: var(--color-omnibox-text);
  --color-composebox-font-light: var(--color-omnibox-text);
  --color-composebox-hover: unset; /* Lens only */
  --color-composebox-input-icon: var(--color-omnibox-results-icon);
  --color-composebox-lens-button: unset; /* Lens only */
  --color-composebox-pdf-chip-icon: var(--color-omnibox-text-subtle);
  --color-composebox-recent-tab-chip-outline: unset; /* Omnibox has no recent tab chip. */
  --color-composebox-scrim-background: unset; /* No scrim. */
  --color-composebox-submit-button-background: var(--color-omnibox-composebox-submit-button-background);
  --color-composebox-submit-button-hover: var(--color-omnibox-action-icon-hover);
  --color-composebox-suggestion-activity: unset; /* No activity suggestion disclaimer. */
  --color-composebox-type-ahead: var(--color-omnibox-composebox-foreground-disabled);
  --color-composebox-type-ahead-chip: var(--color-omnibox-composebox-foreground-disabled);
  --color-composebox-upload-button: var(--omnibox-results-chip-background);
  --color-composebox-upload-button-disabled: var(--color-omnibox-composebox-foreground-disabled);
  --composebox-context-menu-entrypoint-button-color: var(--color-omnibox-composebox-primary-action);
  --cr-composebox-outline-hcm: none;

  position: relative;
}

